--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,71 @@
     transform: rotate(360deg);
   }
 }
+
+
+button,
+a {
+  font: inherit;
+  border: 1px solid #32417d;
+  background: #4a62c2;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.26);
+  cursor: pointer;
+  margin:1px;
+  text-decoration: none;
+}
+button:focus {
+  outline: none;
+}
+button:hover,
+button:active,
+a:hover,
+a:active {
+  background: #4a65cf;
+  border-color: #32417d;
+  box-shadow: 1px 1px 8px rgba(77, 51, 51, 0.26);
+}
+button:disabled,
+button:disabled:  button,
+  a {
+    font: inherit;
+    border: 1px solid #cf0056;
+    background: #cf0056;
+    padding: 0.5rem 1rem;
+    color: white;
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.26);
+    cursor: pointer;
+    text-decoration: none;
+  }
+  button:focus {
+    outline: none;
+  }
+
+
+  input,
+  textarea {
+    width: 100%;
+    font: inherit;
+    border: none;
+    border-bottom: 2px solid #32417d;
+    border-radius: 3px 3px 0 0;
+    background: white;
+    padding: 0.15rem 0.25rem;
+    transition: border-color 0.1s ease-out;
+  }
+  input:focus,
+  textarea:focus {
+    border-color: #32417d;
+    outline: none;
+  }
+  label {
+    margin-bottom: 0.5rem;
+    width: 100%;
+  }
+
+  .inline-input {
+    display: flex;
+  }
