--- a/src/App.css
+++ b/src/App.css
@@ -91,11 +91,17 @@ button:disabled:  button,
     padding: 0.15rem 0.25rem;
     transition: border-color 0.1s ease-out;
   }
+
   input:focus,
   textarea:focus {
     border-color: #32417d;
     outline: none;
   }
+
+  textarea {
+    resize: none;
+  }
+
   label {
     margin-bottom: 0.5rem;
     width: 100%;
@@ -114,11 +120,11 @@ button:disabled:  button,
     font-size: 70%;
   }
 
-  .editable-div {
+  /* .editable-div {
     background-color: white;
     color: #282c34;
     height: 5rem;
     width: 20rem;
     text-align: left;
     margin-bottom: 1rem;
-  }
+  } */
